# ruffle-android

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.gradle.kts  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yml  bump_version.yml  fastlane.yml  lint.yml  release.yml  report_test_results.yml
MagicDosBox/: build.gradle  gradle.properties  local.properties  settings.gradle
MagicDosBox/MagicBox/: build.gradle
MagicDosBox/MagicBox/src/main/: AndroidManifest.xml
MagicDosBox/MagicBox/src/main/assets/: credits.html  license.htm
MagicDosBox/MagicBox/src/main/assets/translation/: ChangeLog.txt  chinese.xml  croatian.xml  english.xml  finnish.xml  french.xml  german.xml  italian.xml  russian.xml  slovak.xml  spanish.xml  ukrainian.xml
MagicDosBox/MagicBox/src/main/jni/dosbox/: config.h  cproject  project
MagicDosBox/MagicBox/src/main/jni/magicbox/: AndroidOSfunc.cpp  AndroidOSfunc.h  EventQueue.h  InputEvent.h  bruenor_magicbox_MagicLauncher.cpp  bruenor_magicbox_MagicLauncher.h  bruenor_magicbox_MagicLauncher_DosBoxThread.h  javapointers.h  keycodes.h  loader.h  missing.cpp
MagicDosBox/MagicBox/src/main/res/drawable/: custom_edittext_00.xml  custom_edittext_00_disabled.xml  custom_edittext_00_focused.xml  custom_edittext_00_normal.xml  custom_edittext_00_textcolor.xml  custom_keyboard_key.xml  custom_keyboard_key_selected.xml  custom_keyboard_key_selected2.xml  custom_radiobutton_00.xml  seekbar_progressbar.xml  seekbar_thumb.xml
MagicDosBox/MagicBox/src/main/res/layout/: activity_game_starter_edit.xml  activity_game_starter_edit_cdrom.xml  addwidget_dialog.xml  app_path_picker.xml  backup.xml  backup_process.xml  button_menu_combo.xml  button_menu_dialog.xml  button_menu_dpad_twoaxis.xml  button_menu_folder.xml  button_menu_joybutton.xml  button_menu_key.xml  button_menu_pointclick.xml  button_menu_text_dialog.xml  button_menu_zoomwidget.xml  cdromitem.xml  collection.xml  collection_settings.xml  combo_delay_edit.xml  combo_folder_edit.xml  combo_target_edit.xml  custom_checkbox_00.xml  custom_checkbox_01.xml  custom_checkbox_02.xml  custom_checkbox_03.xml  custom_checkbox_04.xml  dosbox_import_gamefldpick.xml  dosbox_import_home.xml  dosbox_import_menu1.xml  dosbox_import_shortcutpick.xml  file_browser_item.xml  fonts_item.xml  fonts_title.xml  game_advanced_settings.xml  game_collection_sort.xml  game_profile_export.xml  game_profile_import.xml  gesture_menuitem.xml  gesture_mouse.xml  gesture_swipes.xml  (+37 more)
MagicDosBox/MagicBox/src/main/res/menu/: activity_game_starter.xml
MagicDosBox/MagicBox/src/main/res/values/: color.xml  dimens.xml  strings.xml  styles.xml  themes.xml
MagicDosBox/MagicBox/src/main/res/values-hdpi/: size.xml
MagicDosBox/MagicBox/src/main/res/values-ldpi/: size.xml
MagicDosBox/MagicBox/src/main/res/values-mdpi/: size.xml
MagicDosBox/MagicBox/src/main/res/values-tvdpi/: size.xml
MagicDosBox/MagicBox/src/main/res/values-xhdpi/: size.xml
MagicDosBox/MagicBox/src/main/res/values-xxhdpi/: size.xml
MagicDosBox/MagicBox/src/main/res/values-xxxhdpi/: size.xml
MagicDosBox/magiclib/: build.gradle  magiclib.aar
app/: .gitignore  build.gradle.kts  lint.xml
app/gradle/wrapper/: gradle-wrapper.properties
app/ruffle/: build.gradle
app/ruffle/src/main/: AndroidManifest.xml
app/ruffle/src/main/res/layout/: activity_main.xml  keyboard.xml  menu_row_item.xml  overlay_layout.xml
app/ruffle/src/main/res/values/: strings.xml
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/rs/ruffle/: ExampleInstrumentedTest.kt  InputEvents.kt  SmokeTest.kt
app/src/androidTest/res/raw/input_tests/: Test.as  test.fla  test.swf
app/src/main/: AndroidManifest.xml
app/src/main/assets/demos/: flyguy.swf  marvin_spectrum.swf
app/src/main/java/rs/ruffle/: DemosManager.kt  FullscreenNativeActivity.java  FullscreenNativeActivity.kt  Keyboard.kt  MainActivity.kt  Navigation.kt  PanicActivity.kt  PanicScreen.kt  (+6 more)
app/src/main/res/drawable/: ic_launcher_monochrome.xml  ic_logo_dark.xml  ic_logo_light.xml
app/src/main/res/layout/: add_storage.xml  addwidget_item.xml  button_menu_dpad_classic.xml  button_menu_dpad_main.xml  button_menu_dpad_mouseabs.xml  button_menu_journal.xml  button_menu_mouse.xml  button_menu_mouse_type.xml  button_menu_special_action.xml  button_menu_switcher.xml  button_menu_walkthrough.xml  button_shape_rounded.xml  cfg_to_clp_dialog.xml  collection_folder_edit.xml  collection_item.xml  collection_item_delete.xml  collection_item_duplicate.xml  color_picker.xml  combo_item.xml  custom_btn_arsenic.xml  custom_toolbar_style.xml  design_mode_helper.xml  design_mode_helper_item.xml  dialog_theme.xml  dosbox_import_contentholder.xml  edit_dosbox_config.xml  file_browser_copyfile.xml  file_browser_main.xml  floating_widget_options.xml  fonts.xml  game_item.xml  gesture_longpress.xml  global_settings.xml  help.xml  help_text_selector.xml  image_viewer_item_multi.xml  ipx.xml  keyboard.xml  keycodes_item.xml  lastest_selector.xml  (+23 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: file_paths.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: Cargo.toml  build.rs
native/src/: audio.rs  custom_event.rs  executor.rs  keycodes.rs  lib.rs  navigator.rs
src/: audio.rs  custom_event.rs  executor.rs  java.rs  keycodes.rs  lib.rs  navigator.rs  trace.rs  ui.rs
(+366 files in other folders)
