[package]
# Underscore because the cargo-ndk gradle plugin doesn't transform a hyphen to it.
name = "ruffle_android"
version = "0.1.0"
authors = ["TÖRÖK Attila <torokati44@gmail.com>"]
edition = "2018"
resolver = "2"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "symbols"

[dependencies]

android-activity = { version = "0.6.0", features = ["game-activity"] }
android_logger = "0.15.0"

jni = "0.21.1"
ndk = { version = "0.9.0", features = ["audio"] }
ndk-context = "0.1.1"

# Have to follow Ruffle with this.
wgpu = "24.0.5"

ruffle_core = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master", features = [
    "audio",
    "symphonia",
    "mp3",
    "nellymoser",
    "lzma",
    "default_compatibility_rules",
    "default_font",
] }

ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_video_software = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_frontend_utils = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }

log = "0.4.27"

# Redirect tracing to log
tracing = {version = "0.1.41", features = ["log", "log-always"]}
backtrace = "0.3.75"

url = "2.5.2"
webbrowser = "1.0.5"

tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"]}

[features]
jpegxr = ["ruffle_core/jpegxr"]
