[package]
name = "ruffle-android"
version = "0.1.0"
authors = ["TÖRÖK Attila <torokati44@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "symbols"

[dependencies]

android-activity = { version = "0.4.3", features = ["game-activity"] }
android_logger = "0.13.3"

jni = "0.21.1"
ndk = { version = "0.7.0", features = ["audio"] }
ndk-context = "0.1.1"

winit = { version = "0.28.6", features = ["android-game-activity"] }
wgpu = "0.16.3"

ruffle_core = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master", features = [
    "audio",
    "symphonia",
    "mp3",
    "nellymoser",
    "lzma",
] }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_video = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_video_software = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }

log = "0.4.19"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}

url = "2.4.0"
generational-arena = "0.2.9"
async-channel = "1.9.0"

[patch.crates-io]
wgpu = { git = 'https://github.com/torokati44/wgpu.git', branch = "v0.16" }
wgpu-hal = { git = 'https://github.com/torokati44/wgpu.git', branch = "v0.16" }
wgpu-types = { git = 'https://github.com/torokati44/wgpu.git', branch = "v0.16" }
wgpu-core = { git = 'https://github.com/torokati44/wgpu.git', branch = "v0.16" }

[package.metadata.android]
# These are only defaults, for when no target is specified in the command line.
build_targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "x86_64-linux-android",
    "i686-linux-android",
]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 29
