[package]
# Underscore because the cargo-ndk gradle plugin doesn't transform a hyphen to it.
name = "ruffle_android"
version = "0.1.0"
authors = ["TÖRÖK Attila <torokati44@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "symbols"

[dependencies]

android-activity = { version = "0.4.3", features = ["game-activity"] }
android_logger = "0.13.3"

jni = "0.21.1"
ndk = { version = "0.7.0", features = ["audio"] }
ndk-context = "0.1.1"

winit = { version = "0.28.6", features = ["android-game-activity"] }
wgpu = "0.17.0"

ruffle_core = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master", features = [
    "audio",
    "symphonia",
    "mp3",
    "nellymoser",
    "lzma",
] }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_video = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_video_software = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }

log = "0.4.20"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}

url = "2.4.1"
generational-arena = "0.2.9"
async-channel = "1.9.0"
