[package]
# Underscore because the cargo-ndk gradle plugin doesn't transform a hyphen to it.
name = "ruffle_android"
version = "0.1.0"
authors = ["TÖRÖK Attila <torokati44@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "symbols"

[dependencies]

android-activity = { version = "0.5.2", features = ["game-activity"] }
android_logger = "0.13.3"

jni = "0.21.1"
ndk = { version = "0.8.0", features = ["audio"] }
ndk-context = "0.1.1"

# Have to follow Ruffle with these.
winit = { version = "0.29.13", features = ["android-game-activity"] }
wgpu = "0.19.3"

ruffle_core = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master", features = [
    "audio",
    "symphonia",
    "mp3",
    "nellymoser",
    "lzma",
    "default_compatibility_rules",
    "default_font",
] }

ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_video = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_video_software = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }

log = "0.4.21"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}

# Redirect tracing to log
tracing = {version = "0.1.40", features = ["log", "log-always"]}

url = "2.5.0"
generational-arena = "0.2.9"
async-channel = "2.2.0"
